--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-requests==2.22.0
+requests==2.23.0
 ckanapi==4.3
-# def requirements
-pytest==5.3.2
-black>=19
-deepdiff==4.0.9
+# dev requirements
+pytest==5.4.1
+black
+deepdiff==4.3.2
+pylint==2.4.4
+prospector
