resolve problems with package update: - package update, difference detection working - package update, parsing into delete, add, and update structs now working
TODO:
- figure out what needs to be added to do the actual update of packages.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,14 @@
             "envFile": "${workspaceFolder}/.env"
         },
         {
+            "name": "main.py",
+            "type": "python",
+            "request": "launch",
+            "program": "src/main.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
             "name": "Python: test_CKANData: test",
             "type": "python",
             "request": "launch",
