--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
         "openid",
         "orgs",
         "pformat",
+        "pkgs",
         "posixpath",
         "pycache",
         "pylint",
